scripts/tests/errors/err_call_nil.bu
// Test: calling nil as a function
// Expected: runtime error about calling non-callable

var x = nil;
x();
